--- a/arcane/leaderboard.html
+++ b/arcane/leaderboard.html
@@ -390,7 +390,8 @@
     async function fetchAndUpdate() {
         try {
             const response = await fetch(`https://huntingstats378.onrender.com/api/discord/arcane/top100/${server}`);
-            const users = await response.json();
+            const levels = await response.json();
+            const users = levels.levels
 
             users.slice(0, 50).forEach((user, index) => {
                 setTimeout(() => {
