--- a/arcane/leaderboard.html
+++ b/arcane/leaderboard.html
@@ -370,7 +370,7 @@
 </body>
 <script>
 const searchParams = new URLSearchParams(window.location.search);
-const server = searchParams.get("server") || "1245449302851977298";
+const server = searchParams.get("id") || "1245449302851977298";
 
 // Accurate Arcane XP logic using xpOptions from the API
 function requiredXPToNextLevel(level, xpOptions) {
