--- a/arcane/leaderboard.html
+++ b/arcane/leaderboard.html
@@ -416,7 +416,7 @@ function getAvatarURL(user) {
 
 async function fetchAndUpdate() {
     try {
-        const response = await fetch(`https://huntingstats378.onrender.com/api/discord/arcane/top100/${id}`);
+        const response = await fetch(`https://huntingstats378.onrender.com/api/discord/arcane/top100/${server}`);
         const data = await response.json();
         const users = data.levels;
         const xpOptions = data.xpOptions;
