--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 <a href="./fysc">
                     <h1>FYSC</h1>
                 </a>
+                <a href="./database">
+                    <h1>Database (Soon, last updated 2025-07-29)</h1>
+                </a>
           </div>
         </div>
     </div>
