--- a/main/assets/counts/index.html
+++ b/main/assets/counts/index.html
@@ -69,6 +69,7 @@ var down = urlParams.get("down") || fc;
 var format = urlParams.get("format") || 0;
 var clock = urlParams.get("clock") || false;
 var duration = urlParams.get("duration") || 2;
+var update = urlParams.get("update") || 2;
 var est = urlParams.get("est") || 0;
 var goal = urlParams.get("goal") || 0;
 
@@ -148,7 +149,7 @@ setInterval(async () => {
             console.error("Error fetching data:", error);
         }
     }
-}, 2000);
+}, (durationNumber(update) * 1000));
 
 // Apply styles using the fetched parameters
 document.documentElement.style.setProperty('--backcolor', bg);
