--- a/sta.html
+++ b/sta.html
@@ -33,7 +33,7 @@
   <div class="odometer" id="xpCounter">Loading...</div>
 
   <script>
-const BASE_URL = "https://corsproxy.io/?https://api.lurkr.gg/v2/levels/1150096734576451614";
+const BASE_URL = "https://huntingstats378.onrender.com/corsproxy?https://api.lurkr.gg/v2/levels/1150096734576451614";
 let currentPage = 1;
 
 function getAvatarURL(user) {
