--- a/sta-leaderboard.html
+++ b/sta-leaderboard.html
@@ -190,7 +190,7 @@
       const loading = document.getElementById('loadingMsg');
 
       try {
-        const res = await fetch('https://corsproxy.io/?https://api.lurkr.gg/v2/levels/1150096734576451614?page=1');
+        const res = await fetch('https://huntingstats378.onrender.com/corsproxy/?https://api.lurkr.gg/v2/levels/1150096734576451614?page=1');
 
         const data = await res.json();
         const users = data.levels.slice(0, 100);
