--- a/sta/leaderboard.html
+++ b/sta/leaderboard.html
@@ -378,7 +378,7 @@
 
     async function fetchAndUpdate() {
         try {
-            const response = await fetch("https://corsproxy.io/?https://api.lurkr.gg/v2/levels/1150096734576451614?page=1");
+            const response = await fetch("https://huntingstats378.onrender.com/corsproxy?url=https://api.lurkr.gg/v2/levels/1150096734576451614?page=1");
             const data = await response.json();
             const users = data.levels;
 
@@ -413,3 +413,4 @@
     fetchAndUpdate();
     setInterval(fetchAndUpdate, 10000);
 </script>
+
