--- a/lurkr/leaderboard.html
+++ b/lurkr/leaderboard.html
@@ -383,7 +383,7 @@
 
     async function fetchAndUpdate() {
         try {
-            const response = await fetch(`https://huntingstats378.onrender.com/corsproxy?url=https://api.lurkr.gg/v2/levels/${server}?page=${page}`);
+            const response = await fetch(`https://huntingstats378.onrender.com/corsproxy?url=https://api.lurkr.gg/v2/levels/${server}?page=${String(page)}`);
             const data = await response.json();
             const users = data.levels;
 
